k8s/k8s.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-api-deployment
  template:
    metadata:
      labels:
        app: app-api-deployment
    spec:
      containers:
        - name: app-api-deployment
          image: teerawutkt/sprint3-jwt:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: app-api-configmap

---

apiVersion: v1
kind: Service
metadata:
  name: app-api-service
spec:
  selector:
    app: app-api-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: app-api-service
                port:
                  number: 80
